--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,19 +45,16 @@ dev_dependencies:
   firebase_core: ^2.14.0
   fluttertoast: ^8.2.2
   http: any
-  flutter_client_sse: ^1.0.0
   equatable: ^2.0.5
   google_sign_in: ^6.1.4
   step_progress_indicator: ^1.0.2
   eventsource: ^0.4.0
-  sse_channel: 0.0.3
-  circular_countdown_timer: ^0.2.3
   get_it: ^7.6.0
   sqflite: ^2.2.8+4
   lottie: any
-  im_stepper: ^1.0.1+1
   intl: ^0.18.1
   circular_countdown: ^2.1.0
+  connectivity_plus: ^4.0.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -95,12 +92,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: RobotoCondensed
+      fonts:
+       - asset: Assets/fonts/RobotoCondensed-Regular.ttf
+       - asset: Assets/fonts/RobotoCondensed-Bold.ttf
+         weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
