--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dev_dependencies:
   intl: ^0.18.1
   circular_countdown: ^2.1.0
   connectivity_plus: ^4.0.1
+  flip_card: ^0.7.0
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
